tests/fail/expr/binary.rs
fn main() {
    one_assert::assert!(1 + 1);
    one_assert::assert!(true == 1);
}
