tests/fail/expr/binary.stderr
error[E0308]: mismatched types
 --> tests/fail/expr/binary.rs:2:25
  |
2 |     one_assert::assert!(1 + 1);
  |                         ^^^^^ expected `bool`, found integer

error[E0308]: mismatched types
 --> tests/fail/expr/binary.rs:3:33
  |
3 |     one_assert::assert!(true == 1);
  |                         ----    ^ expected `bool`, found integer
  |                         |
  |                         expected because this is `bool`
